--- a/CFC Digest Editor/CFC Digest Editor.csproj
+++ b/CFC Digest Editor/CFC Digest Editor.csproj
@@ -8,7 +8,7 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace>CFC_Digest_Editor</RootNamespace>
     <AssemblyName>CFC Digest Editor</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
@@ -23,6 +23,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -35,6 +36,26 @@
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>icon.ico</ApplicationIcon>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\x86\Debug\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DebugType>full</DebugType>
+    <PlatformTarget>x86</PlatformTarget>
+    <LangVersion>7.3</LangVersion>
+    <ErrorReport>prompt</ErrorReport>
+    <Prefer32Bit>true</Prefer32Bit>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
+    <OutputPath>bin\x86\Release\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>x86</PlatformTarget>
+    <LangVersion>7.3</LangVersion>
+    <ErrorReport>prompt</ErrorReport>
+    <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -56,14 +77,93 @@
     <Compile Include="About.designer.cs">
       <DependentUpon>About.cs</DependentUpon>
     </Compile>
+    <Compile Include="ArquivoRAW\Bin.cs" />
+    <Compile Include="ArquivoRAW\EncFile.cs" />
+    <Compile Include="ArquivoRAW\Encodings.cs" />
+    <Compile Include="ArquivoRAW\RAW.cs" />
+    <Compile Include="ArquivoRAW\TM2.cs" />
     <Compile Include="cfcdigutils\Compression.cs" />
     <Compile Include="cfcdigutils\DIG.cs" />
     <Compile Include="cfcdigutils\FAT.cs" />
     <Compile Include="cfcdigutils\Package.cs" />
     <Compile Include="cfcdigutils\Records.cs" />
     <Compile Include="classes\BinaryUtils.cs" />
+    <Compile Include="classes\IMG.cs" />
+    <Compile Include="classes\IOextent.cs" />
     <Compile Include="classes\PopulateNodes.cs" />
     <Compile Include="classes\StringTerminator.cs" />
+    <Compile Include="classes\TM2.cs" />
+    <Compile Include="ImgLib\Common\BinaryReaderExtensions.cs" />
+    <Compile Include="ImgLib\Common\Endianness.cs" />
+    <Compile Include="ImgLib\Common\GenericDictionary.cs" />
+    <Compile Include="ImgLib\Common\ImageExtensions.cs" />
+    <Compile Include="ImgLib\Common\ImageUtils.cs" />
+    <Compile Include="ImgLib\Common\InteropUtils.cs" />
+    <Compile Include="ImgLib\Encoding\ColorCodec.cs" />
+    <Compile Include="ImgLib\Encoding\ColorCodecEndiannessDependent.cs" />
+    <Compile Include="ImgLib\Encoding\ColorComparers\ARGBColorComparer.cs" />
+    <Compile Include="ImgLib\Encoding\ImageDecoder.cs" />
+    <Compile Include="ImgLib\Encoding\ImageDecoderDirectColor.cs" />
+    <Compile Include="ImgLib\Encoding\ImageDecoderIndexed.cs" />
+    <Compile Include="ImgLib\Encoding\ImageEncoder.cs" />
+    <Compile Include="ImgLib\Encoding\ImageEncoderDirectColor.cs" />
+    <Compile Include="ImgLib\Encoding\ImageEncoderIndexed.cs" />
+    <Compile Include="ImgLib\Encoding\Implementation\ColorCodec16BitLEABGR.cs" />
+    <Compile Include="ImgLib\Encoding\Implementation\ColorCodec24BitRGB.cs" />
+    <Compile Include="ImgLib\Encoding\Implementation\ColorCodec32BitABGR.cs" />
+    <Compile Include="ImgLib\Encoding\Implementation\ColorCodec32BitARGB.cs" />
+    <Compile Include="ImgLib\Encoding\Implementation\ColorCodec32BitBGRA.cs" />
+    <Compile Include="ImgLib\Encoding\Implementation\ColorCodec32BitRGBA.cs" />
+    <Compile Include="ImgLib\Encoding\Implementation\ColorCodecDXT1.cs" />
+    <Compile Include="ImgLib\Encoding\Implementation\ColorCodecDXT1Gamecube.cs" />
+    <Compile Include="ImgLib\Encoding\Implementation\ColorCodecI4.cs" />
+    <Compile Include="ImgLib\Encoding\Implementation\ColorCodecI8.cs" />
+    <Compile Include="ImgLib\Encoding\Implementation\ColorCodecIA4.cs" />
+    <Compile Include="ImgLib\Encoding\Implementation\ColorCodecIA8.cs" />
+    <Compile Include="ImgLib\Encoding\Implementation\ColorCodecRGB565.cs" />
+    <Compile Include="ImgLib\Encoding\Implementation\ColorCodecRGB5A3.cs" />
+    <Compile Include="ImgLib\Encoding\Implementation\IndexCodec4Bpp.cs" />
+    <Compile Include="ImgLib\Encoding\Implementation\IndexCodec8Bpp.cs" />
+    <Compile Include="ImgLib\Encoding\IndexCodec.cs" />
+    <Compile Include="ImgLib\Encoding\IndexCodecEndiannessDependent.cs" />
+    <Compile Include="ImgLib\Filters\Filter.cs" />
+    <Compile Include="ImgLib\Filters\FilterComposer.cs" />
+    <Compile Include="ImgLib\Filters\GamecubePlanarFilter.cs" />
+    <Compile Include="ImgLib\Filters\SwizzleFilter.cs" />
+    <Compile Include="ImgLib\Filters\TileFilter.cs" />
+    <Compile Include="ImgLib\Filters\TIM2PaletteFilter.cs" />
+    <Compile Include="ImgLib\Formats\DummyTexture.cs" />
+    <Compile Include="ImgLib\Formats\GenericTextureFormat.cs" />
+    <Compile Include="ImgLib\Formats\Implementation\NamcoTexture.cs" />
+    <Compile Include="ImgLib\Formats\Implementation\NamcoTexture.Serializer.cs" />
+    <Compile Include="ImgLib\Formats\Implementation\NUTTexture.Serializer.cs" />
+    <Compile Include="ImgLib\Formats\Implementation\PE3DATTexture.cs" />
+    <Compile Include="ImgLib\Formats\Implementation\PE3DATTexture.Serializer.cs" />
+    <Compile Include="ImgLib\Formats\Implementation\PE3SimpleDATTexture.cs" />
+    <Compile Include="ImgLib\Formats\Implementation\PE3SimpleDATTexture.Serializer.cs" />
+    <Compile Include="ImgLib\Formats\Implementation\TacticsOgreEFXTexture.cs" />
+    <Compile Include="ImgLib\Formats\Implementation\TacticsOgreEFXTexture.Serializer.cs" />
+    <Compile Include="ImgLib\Formats\Implementation\TIM2Texture.cs" />
+    <Compile Include="ImgLib\Formats\Implementation\TIM2Texture.Segment.cs" />
+    <Compile Include="ImgLib\Formats\Implementation\TIM2Texture.Serializer.cs" />
+    <Compile Include="ImgLib\Formats\Implementation\TPLTexture.cs" />
+    <Compile Include="ImgLib\Formats\Implementation\TPLTexture.Serializer.cs" />
+    <Compile Include="ImgLib\Formats\Implementation\TX48Texture.cs" />
+    <Compile Include="ImgLib\Formats\Implementation\TX48Texture.Serializer.cs" />
+    <Compile Include="ImgLib\Formats\PalettedTextureFormat.cs" />
+    <Compile Include="ImgLib\Formats\Serialization\Exceptions\MetadataException.cs" />
+    <Compile Include="ImgLib\Formats\Serialization\Metadata\MetadataReader.cs" />
+    <Compile Include="ImgLib\Formats\Serialization\Metadata\MetadataReaderBase.cs" />
+    <Compile Include="ImgLib\Formats\Serialization\Metadata\MetadataWriter.cs" />
+    <Compile Include="ImgLib\Formats\Serialization\Metadata\MetadataWriterBase.cs" />
+    <Compile Include="ImgLib\Formats\Serialization\Metadata\XmlMetadataReader.cs" />
+    <Compile Include="ImgLib\Formats\Serialization\Metadata\XmlMetadataWriter.cs" />
+    <Compile Include="ImgLib\Formats\Serialization\SimpleTextureFormatSerializer.cs" />
+    <Compile Include="ImgLib\Formats\Serialization\TextureFormatSerializer.cs" />
+    <Compile Include="ImgLib\Formats\Serialization\TextureFormatSerializerProvider.cs" />
+    <Compile Include="ImgLib\Formats\TextureContainer.cs" />
+    <Compile Include="ImgLib\Formats\TextureFormat.cs" />
+    <Compile Include="ImgLib\Formats\TextureFormatBase.cs" />
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
     </Compile>
