--- a/CFC Digest Editor/CFC Digest Editor.csproj
+++ b/CFC Digest Editor/CFC Digest Editor.csproj
@@ -35,7 +35,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>icon.ico</ApplicationIcon>
+    <ApplicationIcon>ChatGPT-Image-29-de-mar.-de-2025_-18_54_39.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <DebugSymbols>true</DebugSymbols>
@@ -88,8 +88,12 @@
     <Compile Include="cfcdigutils\Package.cs" />
     <Compile Include="cfcdigutils\Records.cs" />
     <Compile Include="classes\BinaryUtils.cs" />
+    <Compile Include="classes\EncFile.cs" />
+    <Compile Include="classes\Encodings.cs" />
     <Compile Include="classes\IMG.cs" />
     <Compile Include="classes\IOextent.cs" />
+    <Compile Include="classes\MB0.cs" />
+    <Compile Include="classes\PAP.cs" />
     <Compile Include="classes\PopulateNodes.cs" />
     <Compile Include="classes\StringTerminator.cs" />
     <Compile Include="classes\TM2.cs" />
@@ -217,6 +221,7 @@
     <None Include="Resources\Simbolo_konoha.svg.png" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="ChatGPT-Image-29-de-mar.-de-2025_-18_54_39.ico" />
     <Content Include="icon.ico" />
     <None Include="Resources\folder.png" />
     <None Include="Resources\file.png" />
