--- a/CFC Digest Editor/CFC Digest Editor.csproj
+++ b/CFC Digest Editor/CFC Digest Editor.csproj
@@ -88,6 +88,7 @@
     <Compile Include="cfcdigutils\Package.cs" />
     <Compile Include="cfcdigutils\Records.cs" />
     <Compile Include="classes\BinaryUtils.cs" />
+    <Compile Include="classes\DSI.cs" />
     <Compile Include="classes\EncFile.cs" />
     <Compile Include="classes\Encodings.cs" />
     <Compile Include="classes\IMG.cs" />
